--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -1,7 +1,16 @@
 <h3>Create an Entry</h3>
 <form action="/entries" method="POST">
 
-	<label>New Content:</label>
+	<label>Program Name:</label>
+	</br></br>
+	<input type="text" name="name">
+	</br></br>
+	<label>Program Field:</label>
+	</br></br>
+	<input type="text" name="field">
+	</br></br>
+	<label>Experience:</label>
+	</br></br>
 	<input type="text" name="content">
 	</br></br>
 	<input type="submit" value="submit">
