--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -7,7 +7,26 @@
 	</br></br>
 	<label>Program Field:</label>
 	</br></br>
-	<input type="text" name="field">
+		<select name="field">
+	   <option value="Anesthesiology">Anesthesiolog</option>
+		 <option value="Dermatology">Dermatology</option>
+		 <option value="Emergency Medicine">Emergency Medicine</option>
+		 <option value="Family Medicine">Family Medicine</option>
+		 <option value="Internal Medicine">Internal Medicine</option>
+		 <option value="Neurology">Neurology</option>
+		 <option value="Neurosurgery">Neurosurgery</option>
+		 <option value="OBGYN">OBGYN</option>
+		 <option value="Ophthalmology">Ophthalmology</option>
+		 <option value="Orthopaedic Surgery">Orthopaedic Surgery</option>
+	   <option value="Otorhinolaryngology">Otorhinolaryngology</option>
+		 <option value="Pathology">Pathology</option>
+		 <option value="Pediatrics">Pediatrics</option>
+		 <option value="Physiatry">Physiatry</option>
+		 <option value="Psychiatry">Psychiatry</option>
+		 <option value="Radiology">Radiology</option>
+		 <option value="Surgery">Surgery</option>
+		 <option value="Urology">Urology</option>
+ 		</select>
 	</br></br>
 	<label>Experience:</label>
 	</br></br>
