--- a/app/views/applicants/show.erb
+++ b/app/views/applicants/show.erb
@@ -1,10 +1,10 @@
-<h1>List of Your Entries</h1>
+<h1>List of <%= current_applicant.username %>'s Entries</h1>
 
 <p><a href="/entries/new">Add Interview</a>
 </p>
 
-<p><% @applicant.each do |entry| %>
-    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %></a><br></br>
+<p><% current_applicant.entries.each do |entry| %>
+    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %><br></br>
    <% end %>
 
 <a href="/logout">Logout</a>
