--- a/app/views/entries/show_entry.erb
+++ b/app/views/entries/show_entry.erb
@@ -1,5 +1,5 @@
-<h1>Your Interviews</h1>
-<p><h3>Program Name:</h3><br></br>
+<h1>Interview Information</h1>
+<p><h3>Program Name:</h3>
   <%= @entry.name %></p>
 <p><h3>Program Field:</h3>
   <%= @entry.field %></p>
