work on centering page layouts and adding links

--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -1,4 +1,4 @@
-<h3>Create an Entry</h3>
+<h3>Share Your Interview Experience</h3>
 <form action="/entries" method="POST">
 
 	<label>Program Name:</label>
@@ -8,7 +8,7 @@
 	<label>Program Field:</label>
 	</br></br>
 		<select name="field">
-	   <option value="Anesthesiology">Anesthesiolog</option>
+	   <option value="Anesthesiology">Anesthesiology</option>
 		 <option value="Dermatology">Dermatology</option>
 		 <option value="Emergency Medicine">Emergency Medicine</option>
 		 <option value="Family Medicine">Family Medicine</option>
@@ -32,5 +32,5 @@
 	</br></br>
 	<input type="text" name="content">
 	</br></br>
-	<input type="submit" value="submit">
+	<input type="submit" value="Submit">
 </form>
