--- a/app/views/entries/edit_entry.erb
+++ b/app/views/entries/edit_entry.erb
@@ -9,7 +9,7 @@
 <label>Program Field:</label>
 </br></br>
 	<select name="field">
-	 <option value="Anesthesiology">Anesthesiolog</option>
+	 <option value="Anesthesiology">Anesthesiology</option>
 	 <option value="Dermatology">Dermatology</option>
 	 <option value="Emergency Medicine">Emergency Medicine</option>
 	 <option value="Family Medicine">Family Medicine</option>
@@ -34,5 +34,5 @@
 	<input type="text" name="content" id="content" value="<%= @entry.content %>">
 </br></br>
 
-<input type="submit" value="submit">
+<input type="submit" value="Submit">
 </form>
