--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,10 @@
-<h1>Webpage</h1>
+<h1>Medical Residency Interview Feedback</h1>
 
-Welcome. Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.
+<h3>Welcome! This is a community for sharing interview experiences.
+<br>
+We hope applicants can benefit from the submissions on this site. Please contribute by telling us about your interview(s)!
+</h3>
+
+<p><a href="/signup">Sign Up</a>
+<br>
+<a href="/login">Log In</a></p>
