--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>Med Residency Site</title>
+    <title>Interview Feedback</title>
   </head>
   <body>
 
+    <center>
     <div class="container">
       <%= yield %>
     </div>
