--- a/app/views/applicants/create_applicant.erb
+++ b/app/views/applicants/create_applicant.erb
@@ -13,5 +13,7 @@
 	<input type="text" name="password">
 	</br></br>
 
-	<input type="submit" value="submit">
+	<input type="submit" value="Submit">
 </form>
+
+<p>Already a member? Log in <a href="/login">here</a>.</p>
