--- a/app/views/applicants/login.erb
+++ b/app/views/applicants/login.erb
@@ -9,5 +9,7 @@
 	<input type="password" name="password">
 	</br></br>
 
-	<input type="submit" value="submit">
+	<input type="submit" value="Log in">
 </form>
+
+<p>Not a member? Sign up for an account <a href="/signup">here</a>!</p>
