--- a/app/views/applicants/show.erb
+++ b/app/views/applicants/show.erb
@@ -1,11 +1,13 @@
-<h1>List of <%= current_applicant.username %>'s Entries</h1>
+<h3>List of <%= current_applicant.username %>'s Entries</h3>
 
-<p><a href="/entries/new">Add Interview</a>
-</p>
-
-<p><% current_applicant.entries.each do |entry| %>
-    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %><br></br>
+<% current_applicant.entries.each do |entry| %>
+    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %><br>
    <% end %>
 
+<p><b>Menu:</b><br>
+<a href="/entries/new">Add Interview</a>
+<br>
+<a href="/entries">View Other Applicants' Experiences</a>
+<br>
 <a href="/logout">Logout</a>
 </p>
