--- a/app/views/entries/entries.erb
+++ b/app/views/entries/entries.erb
@@ -1,11 +1,14 @@
-<h2>Welcome, <%= current_applicant.username %></h2>
+<h2>Here are what applicants' had to say about their interview days:</h2>
 
-What would you like to do?
+<% @entries.each do |entry| %>
+  <b>Program Name:</b> <%= entry.name %><br>
+  <b>Program Field:</b> <%= entry.field %><br>
+  <b>Interview Story:</b> <%= entry.content %><p>
+<% end %>
 
-<p><a href="/entries/new">Add Interview</a>
-</p>
-
-<p><a href="/applicants/show">View Your Interviews</a>
-</p>
-
+<p>
+Now that you've finished reading, what would you like to do? <br>
+<a href="/entries/new">Add Interview</a><br>
+<a href="/applicants/show">View Your Interviews</a><br>
 <a href="/logout">Logout</a>
+</p>
