enlarge textboxes on create and edit entry files. also redo font heading sizes

--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -1,4 +1,4 @@
-<h3>Share Your Interview Experience</h3>
+<h2>Share Your Interview Experience</h2>
 <form action="/entries" method="POST">
 
 	<label>Program Name:</label>
@@ -30,7 +30,11 @@
 	</br></br>
 	<label>Experience:</label>
 	</br></br>
-	<input type="text" name="content">
+	<textarea rows="7" cols="70" type="text" name="content"></textarea>
 	</br></br>
 	<input type="submit" value="Submit">
 </form>
+
+<p><a href="/applicants/show">View Your Interviews</a><br>
+<a href="/entries">View Other Applicants' Experiences</a><br>
+<a href="/logout">Logout</a></p>
