redo font heading sizes again. change program field to program specialty

--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -1,11 +1,11 @@
-<h2>Share Your Interview Experience</h2>
+<h1>Share Your Interview Experience</h1>
 <form action="/entries" method="POST">
 
 	<label>Program Name:</label>
 	</br></br>
 	<input type="text" name="name">
 	</br></br>
-	<label>Program Field:</label>
+	<label>Program Specialty:</label>
 	</br></br>
 		<select name="field">
 	   <option value="Anesthesiology">Anesthesiology</option>
