--- a/app/views/entries/show_entry.erb
+++ b/app/views/entries/show_entry.erb
@@ -1,7 +1,7 @@
-<h2>Interview Information</h2>
+<h1>Interview Information</h1>
 <b>Program Name:</b><br>
   <%= @entry.name %><br></br>
-<b>Program Field:</b><br>
+<b>Program Specialty:</b><br>
   <%= @entry.field %><br></br>
 <b>Experience:</b><br>
   <%= @entry.content %><br></br>
