--- a/app/views/entries/entries.erb
+++ b/app/views/entries/entries.erb
@@ -1,9 +1,9 @@
-<h2>Here are what applicants' had to say about their interview days:</h2>
+<h1>Here are what applicants' had to say about their interview days:</h1>
 
 <% @entries.each do |entry| %>
   <b>Program Name:</b> <%= entry.name %><br>
-  <b>Program Field:</b> <%= entry.field %><br>
-  <b>Interview Story:</b> <%= entry.content %><p>
+  <b>Program Specialty::</b> <%= entry.field %><br>
+  <b>Interview Experience:</b> <%= entry.content %><p>
 <% end %>
 
 <p>
