--- a/app/views/entries/show_entry.erb
+++ b/app/views/entries/show_entry.erb
@@ -13,5 +13,6 @@
 
 <p><a href="/entries/<%= @entry.id %>/edit">Edit Submission</a><br>
 <a href="/applicants/show"><%= current_applicant.username %>'s Page</a><br>
+<a href="/entries">View Other Applicants' Experiences</a><br>
 <a href="/logout">Logout</a>
 </p>
