--- a/app/views/applicants/login.erb
+++ b/app/views/applicants/login.erb
@@ -1,6 +1,10 @@
 <h1>Login</h1>
 <form action="/login" method="POST">
 
+<% if flash.has?(:message) %>
+  <font color="red"><%= flash[:message] %></font><br></br>
+<% end %>
+
 	Username:
 	<input type="text" name="username">
 	</br></br>
