--- a/app/views/applicants/show.erb
+++ b/app/views/applicants/show.erb
@@ -1,8 +1,12 @@
 <h1>List of <%= current_applicant.username %>'s Entries</h1>
 
+<% if flash.has?(:message) %>
+  <font color="red"><%= flash[:message] %></font><br></br>
+<% end %>
+
 <% current_applicant.entries.each do |entry| %>
-    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %><br>
-   <% end %>
+    <a href="/entries/<%= entry.id %>"><%= entry.name %> - <%= entry.field %></a><br>
+<% end %>
 
 <p><b>Menu:</b><br>
 <a href="/entries/new">Add Interview</a>
