--- a/app/views/entries/create_entry.erb
+++ b/app/views/entries/create_entry.erb
@@ -1,6 +1,10 @@
 <h1>Share Your Interview Experience</h1>
 <form action="/entries" method="POST">
 
+<% if flash.has?(:message) %>
+  <font color="red"><%= flash[:message] %></font><br></br>
+<% end %>
+
 	<label>Program Name:</label>
 	</br></br>
 	<input type="text" name="name">
